css/styles.css
:root {
  --color-bg: rgb(103, 103, 246);
  --color-input: lightgrey;
}

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-family: 'Poppins', sans-serif;
  font-size: 2rem;
  background-color: var(--color-bg);
}

/* -- Typography -- */

.header {
  font-size: 10rem;
  opacity: .3;
  margin: 0 0 8rem;
  text-align: center;
  font-weight: 900;
}

.container {
  text-align: left;
}



/* -- Lists -- */

.container {
  display: flex;
  padding: 3rem 10rem;
}

.lists-container {
  width: 50%;
}

.all-lists {
  padding: 2rem;
  width: fit-content;
}

.list {
  margin: 1.5rem 0;
  width: fit-content;
  cursor: pointer;
  position: relative;
  transition: .2s;
  opacity: .6;
  font-weight: 700;
}

.list:hover {
  /* font-size: 2.5rem; */
  opacity: 1;
}

.list::after {
  content: '';
  background: currentColor;
  position: absolute;
  height: 2px;
  left: 0;
  right: 0;
  bottom: 0;
  transform: scaleX(0);
  transition: all .2s;
  transform-origin: left;
}

.list:hover::after {
  transform: scaleX(1);

}

.active-list {
  opacity: 1;
}

.active-list.list::after {
  transform: scaleX(1);

}

/* -- Forms -- */

.form {
  display: flex;
  padding: 2rem;
}

/* -- Inputs -- */

.input {
  order: 2;
  margin-left: 1rem;
  background: transparent;
  border: 0;
  color: var(--color-input);
  border-bottom: 1px solid currentColor;
  font-size: 1.8rem;
  outline: none;
  transition: all .3s;
}

.input::placeholder {
  opacity: .7;
  color: var(--color-input);
}

.input:focus {
  border-bottom: 3px solid currentColor;
}

.input:focus::placeholder {
  opacity: .2;
}

.new-task .input::placeholder {
  color: black; 
}

.new-task .input {
  border-color: rgba(0, 0, 0, 0.323);
}

.new-task .input:focus {
  border-bottom: 2px solid black;
  color: black;
}

/* -- Buttons -- */

.btn {
  border: 0;
  background: transparent;
  cursor: pointer;
  transition: .2s;
  outline: none;
}

.btn:hover, .btn:focus {
  transform: scale(1.3);
}

.btn-new-list {
  color: white;
}

.btn-new-task {
  color: black;
}

.delete-btns {
  display: flex;
  justify-content: space-evenly;
  padding: 1rem;
}

.btn-delete {
  opacity: .3;
  font-weight: 700;
}

.btn-delete:focus {
  outline: 3px solid currentColor;
  outline-offset: 3px;
  border-radius: 5px;
}

.btn-delete:hover, .btn-delete:focus {
  transform: scale(1);
  opacity: .8;
}

/* -- Todo -- */

.todo-container {
  width: 50%;
}

.todo-header {
  background: rgb(218, 218, 218);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem;
}

.todo-body {
  background: rgb(238, 238, 238);
}

/* -- Task -- */

.tasks {
  max-height: 300px;
  overflow: scroll;
}

.task {
  padding: 1.5rem;
  border-bottom: 1px solid rgb(200, 200, 200);
}

.task:hover .custom-checkbox, [type="checkbox"]:focus + label .custom-checkbox {
  transform: scale(1.2);
}

.task * {
  cursor: pointer;
}

.task label {
  display: flex;align-items: center;
  position: relative;
  display: inline-flex;
}


.task label::after {
  content: '';
  position: absolute;
  top: 50%;
  right: 0;
  left: 3rem;
  height: 2px;
  background: currentColor;
  transform: scaleX(0);
  transform-origin: left;
  transition: .15s ease-in-out;
}

/* -- Custom Checkbox -- */

[type="checkbox"] {
  display: absolute;
  opacity: 0;
}

.custom-checkbox {
  width: 1.5rem;
  height: 1.5rem;
  outline: 3px solid var(--color-bg);
  margin-right: 1.5rem;
  border-radius: 50%;
  transition: .2s ease;
  
}

[type="checkbox"]:checked + label .custom-checkbox {
  background: var(--color-bg);
  transform: scale(1.2);
  outline-color: white;
  outline-offset: -5px;
}

[type="checkbox"]:checked + label::after {
  transform: scaleX(1);
}

[type="checkbox"]:checked + label {
  opacity: .5;
}

/* -- Mobile -- */

@media screen and (max-width: 425px) {
  .header {
    font-size: 5rem;
    margin-bottom: 3rem;
  }

  .container {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    gap: 5rem;
    text-align: center;
  }

  .lists-container {
    width: auto;
    padding: 2rem;
  }

  .all-lists {
    margin: auto;
  }

  .todo-container {
    width: auto;
    text-align: left;
  }

  .todo-header {
    font-size: 1.5rem;
  }

  .delete-btns {
    justify-content: space-between;
  }

  .btn-delete {
    font-size: 1.5rem;
    margin-top: 2rem;
    color: white;
    opacity: .6;
  }

}

